fix(select): right align arrow

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -28,6 +28,7 @@
     
     &__value-arrow {
         // right most, vertically centered
+        position: absolute;
         top: 50%;
         right: 0;
         transform: translateY(-50%);
